--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-build-classic": "^42.0.2",
     "@ckeditor/ckeditor5-react": "^8.0.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/pagination": "^2.0.35",
     "@popperjs/core": "^2.11.8",
     "@react-aria/ssr": "^3.9.4",
     "@vercel/analytics": "^1.3.1",
