--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^42.0.2",
     "@ckeditor/ckeditor5-react": "^8.0.0",
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/material": "^5.16.6",
+    "@mui/material": "^5.16.7",
     "@nextui-org/pagination": "^2.0.35",
     "@popperjs/core": "^2.11.8",
     "@react-aria/ssr": "^3.9.4",
@@ -28,13 +30,19 @@
     "cookie-session": "^2.1.0",
     "cookies-next": "^4.2.1",
     "copy-to-clipboard": "^3.3.3",
+    "cors": "^2.8.5",
+    "dashjs": "^4.7.4",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "fa-icons": "^0.2.0",
     "hbs": "^4.2.0",
     "iron-session": "^8.0.2",
     "js-cookie": "^3.0.5",
     "maps": "^0.3.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
@@ -45,6 +53,7 @@
     "pdf-viewer": "^0.8.1",
     "pdfjs-dist": "^4.4.168",
     "prism-react-renderer": "^2.2.0",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -58,16 +67,26 @@
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-items-carousel": "^2.8.0",
+    "react-notifications": "^1.7.4",
+    "react-player": "^2.16.0",
     "react-prism-editor": "^1.1.2",
+    "react-razorpay": "^2.0.1",
     "react-responsive": "^10.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
     "router": "^1.3.8",
     "set-cookie": "^0.0.4",
+    "shaka-player": "^4.11.3",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
-    "uuid": "^10.0.0"
+    "styled-components": "^6.1.12",
+    "uuid": "^10.0.0",
+    "video.js": "^8.17.4",
+    "videojs-contrib-dash": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
